Use recreate strategy to prevent double connection error

--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -32,13 +32,7 @@ objects:
       app: ultrahook
       deploymentconfig: ultrahook
     strategy:
-      rollingParams:
-        intervalSeconds: 1
-        maxSurge: 25%
-        maxUnavailable: 25%
-        timeoutSeconds: 600
-        updatePeriodSeconds: 1
-      type: Rolling
+      type: Recreate
     template:
       metadata:
         labels:
