renamed the upstream repo
Signed-off-by: Christoph Görn <goern@redhat.com>

--- a/openshift/ultrahook.app.yaml
+++ b/openshift/ultrahook.app.yaml
@@ -100,7 +100,7 @@ objects:
         name: ultrahook:latest
     source:
       git:
-        uri: https://github.com/aicoe/ultrahook-openshift
+        uri: https://github.com/aicoe/ultrahook
       type: Git
     strategy:
       sourceStrategy:
